modal z-index bug

--- a/blog-cms/src/Components/Modals/ConfirmModal.css
+++ b/blog-cms/src/Components/Modals/ConfirmModal.css
@@ -3,13 +3,8 @@
   padding: 10px;
 }
 
-.confirm-modal {
-  top: '50%';
-  left: '50%';
-  right: 'auto';
-  bottom: 'auto';
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
+.ReactModal__Overlay {
+  z-index: 1000;
 }
 
 .yes-button {
